Polishing.
Fix assertions, simplify tests, reduce test method visibility.

See #3246